--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
+    implementation 'com.android.support:design:27.1.1'
+
 
 
 
